--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,3 +1,39 @@
 {
-  "version": "2.0.0"
+  "version": "2.0.0",
+  "tasks": [
+    {
+      "label": "Build Rust Extension",
+      "type": "shell",
+      "command": "just build",
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      },
+      "problemMatcher": [
+        "$rustc"
+      ],
+      "presentation": {
+        "reveal": "always",
+        "panel": "shared"
+      }
+    },
+    {
+      "label": "Run Riemann",
+      "type": "shell",
+      "command": "just run",
+      "dependsOn": [
+        "Build Rust Extension"
+      ],
+      "options": {
+        "env": {
+          "LD_LIBRARY_PATH": "${workspaceFolder}:${env:LD_LIBRARY_PATH}"
+        }
+      },
+      "problemMatcher": [],
+      "presentation": {
+        "reveal": "always",
+        "panel": "shared"
+      }
+    }
+  ]
 }
