--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,14 +5,12 @@ build-backend = "maturin"
 [project]
 name = "riemann"
 version = "0.1.0"
-description = "Technical PDF reader for Linux"
+description = "PDF reader and Web browser with integrated music mode"
 requires-python = ">=3.11"
 dependencies = [
     "PySide6>=6.5",
 ]
 
 [tool.maturin]
-# This points to the Rust crate
 manifest-path = "rust-core/Cargo.toml"
-# This tells maturin that the python code is inside python-app/riemann
 python-source = "python-app"
