--- a/rust-core/Cargo.toml
+++ b/rust-core/Cargo.toml
@@ -9,7 +9,8 @@ crate-type = ["cdylib"]
 
 [dependencies]
 pyo3 = { version = "0.21.0", features = ["extension-module", "abi3-py311"] }
-pdfium-render = "0.8.37" 
+# Using a newer version to fix text extraction stability
+pdfium-render = "0.8.18" 
 image = "0.24"
 once_cell = "1.18"
 anyhow = "1.0"
